# PipelineETLPythonPDF

./: .env  README.md  pyproject.toml  requirements.txt  start.py
configs/rules/: regras.py
configs/tools/: postgres.py
dbt_dashboard/: app.py  app_exemple.py
dbt_pdf_python/: dbt_project.yml
dbt_pdf_python/models/: source.yml
dbt_pdf_python/models/gold/: gold_fatura.sql
files/: pdf_viz.py  pdf_viz_jornada.py
files/csv/: Redrex - Fatura (1).csv  Redrex - Fatura (1)_small.csv  Redrex - Fatura (10).csv  Redrex - Fatura (10)_small.csv  Redrex - Fatura (11).csv  Redrex - Fatura (11)_small.csv  Redrex - Fatura (12).csv  Redrex - Fatura (12)_small.csv  Redrex - Fatura (13).csv  Redrex - Fatura (13)_small.csv  Redrex - Fatura (14).csv  Redrex - Fatura (14)_small.csv  Redrex - Fatura (15).csv  Redrex - Fatura (15)_small.csv  Redrex - Fatura (16).csv  Redrex - Fatura (16)_small.csv  Redrex - Fatura (17).csv  Redrex - Fatura (17)_small.csv  Redrex - Fatura (18).csv  Redrex - Fatura (18)_small.csv  Redrex - Fatura (19).csv  Redrex - Fatura (19)_small.csv  Redrex - Fatura (2).csv  Redrex - Fatura (2)_small.csv  Redrex - Fatura (20).csv  Redrex - Fatura (20)_small.csv  Redrex - Fatura (21).csv  Redrex - Fatura (21)_small.csv  Redrex - Fatura (22).csv  Redrex - Fatura (22)_small.csv  Redrex - Fatura (23).csv  Redrex - Fatura (23)_small.csv  Redrex - Fatura (24).csv  Redrex - Fatura (24)_small.csv  Redrex - Fatura (25).csv  Redrex - Fatura (25)_small.csv  Redrex - Fatura (26).csv  Redrex - Fatura (26)_small.csv  Redrex - Fatura (27).csv  Redrex - Fatura (27)_small.csv  (+80 more)
(+6 files in other folders)
